--- a/ColabTurtle_Practice.ipynb
+++ b/ColabTurtle_Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18259540",
+   "id": "85c1131c",
    "metadata": {},
    "source": [
     "# These are the commands for your Reference\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "534795eb",
+   "id": "62c5dca9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8af63c55",
+   "id": "b4f4a66f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d59496",
+   "id": "9d2a8594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,12 +128,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5097eb6b",
+   "id": "123e12f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "##\n",
-    "## Draw polygons\n",
+    "## Draw polygons from triangle to decagon\n",
     "##\n",
     "clear()\n",
     "penup()\n",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22f0acb8",
+   "id": "652856bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b18cf37b",
+   "id": "0d9ac2c3",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "073469e5",
+   "id": "8cbda0ae",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6daf393b",
+   "id": "5340cfb7",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "72d3988b",
+   "id": "f0c31b7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b4fb6421",
+   "id": "5aeede49",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "229c76d1",
+   "id": "304879a3",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38914429",
+   "id": "9530a0b5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -452,7 +452,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -466,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
