Commented the tkinter and turtle commands

--- a/Flowers.ipynb
+++ b/Flowers.ipynb
@@ -236,9 +236,9 @@
     "    painter.forward(100)\n",
     "    painter.left(123)\n",
     "    \n",
-    "from Tkinter import *\n",
-    "from turtle import *\n",
-    "import turtle\n",
+    "#from Tkinter import *\n",
+    "#from turtle import *\n",
+    "#import turtle\n",
     "\n",
     "\n",
     "tt = turtle.getscreen()\n",
